type Game {
  id: ID!
  placement: Int!
  team: Team!
  results: [GameResult]!
  points: Int!
  createdAt: Date!
  updatedAt: Date
}

type GameResult {
  id: ID!
  kills: Int!
  game: Game!
  player: Player!
  createdAt: Date!
  updatedAt: Date
}

input CreateGameInput {
  placement: Int!
  team: ID!
  results: [GameResultInput]!
}

input GameResultInput {
  kills: Int!
  player: ID!
}

input UpdateGameInput {
  placement: Int
  results: [GameResultInput]
}

type Mutation {
  createGame(game: CreateGameInput!): Game!
  updateGame(id: ID!, game: UpdateGameInput!): Game!
  deleteGame(id: ID!): Boolean!
}
