type Invitation {
  id: ID!
  player: Player!
  isAdmin: Boolean!
  validUntil: Date!
  createdAt: Date!
  updatedAt: Date
}

input CreateInvitationInput {
  player: ID!
  isAdmin: Boolean
}

input InvitationFilter {
  id: ID
}

type Mutation {
  createInvitation(invitation: CreateInvitationInput!): Invitation!
  deleteInvitation(id: ID!): Boolean!
}

type Query {
  findInvitations(filter: InvitationFilter): [Invitation]
}
