type Player {
  id: ID!
  name: String!
  rosters: [Roster]
  teams: [Team]
  teamLeaderships: [Team]
  user: User
  createdAt: Date!
  updatedAt: Date
}

input CreatePlayerInput {
  name: String!
}

input UpdatePlayerInput {
  name: String
}

input PlayerFilter {
  id: ID
  name: String
}

type Mutation {
  createPlayer(player: CreatePlayerInput!): Player!
  updatePlayer(id: ID!, player: UpdatePlayerInput!): Player!
  deletePlayer(id: ID!): Boolean!
}

type Query {
  findPlayers(filter: PlayerFilter): [Player]
}
