type Team {
  id: ID!
  name: String!
  placement: Int
  points: Int
  teamLeader: Player!
  players: [Player]!
  tournament: Tournament!
  games: [Game]
  createdAt: Date!
  updatedAt: Date
}

input CreateTeamInput {
  name: String!
  tournament: ID!
  teamLeader: ID!
  players: [ID]!
}

input UpdateTeamInput {
  name: String
  teamLeader: ID
  players: [ID]
}

input TeamFilter {
  id: ID
  name: String
}

type Mutation {
  createTeam(team: CreateTeamInput!): Team!
  updateTeam(id: ID!, team: UpdateTeamInput!): Team!
  deleteTeam(id: ID!): Boolean!
}

type Query {
  findTeams(filter: TeamFilter): [Team]
}
