type User {
  id: ID!
  username: String!
  password: String!
  isAdmin: Boolean!
  player: Player
  createdAt: Date!
  updatedAt: Date
}

input CreateUserInput {
  username: String!
  password: String!
}

input UpdateUserInput {
  username: String
  password: String
  isAdmin: Boolean
  player: ID
}

input UserFilter {
  id: ID
  username: String
  isAdmin: Boolean
}

type Mutation {
  login(username: String!, password: String!): String!
  createUser(invitationId: ID!, user: CreateUserInput!): User!
  updateUser(id: ID!, user: UpdateUserInput!): User!
}

type Query {
  findUsers(filter: UserFilter): [User]
}
