classDiagram
  class Tournament {
    +String name
    +Date startDate
    +Date endDate
    +int gameLimit
    +Roster roster
    +List~Team~ teams
    +bool isClosed
    +PointsCalculationRule pointsCalculationRule

    +createRandomTeams() List~Team~
  }

  class Roster {
    +String name
    +List~Player~ players
  }

  class Player {
    +String name
  }

  class Team {
    +String name
    +int placement
    +int points
    +Player teamLeader
    +List~Player~ players
    +List~Game~ games
  }

  class Game {
    +int placement
    +int points
    +Team team
    +List~GameResult~ results
  }

  class GameResult {
    +int kills
    +Player player
  }

  class PointsCalculationRule {
    +Object leftOperand
    +Object rightOperand
    +String operator

    +getResult() int
  }

  class User {
    +String name
    +String password
    +bool isAdmin
    +Player player
  }

  class Invitation {
    +Player: player
    +Boolean: isAdmin
    +Date: validUntil
  }

  Tournament "1..*" o-- "0..1" Roster
  Tournament "1..*" o-- "1" PointsCalculationRule
  Tournament "1" *-- "0..*" Team
  Roster "1..*" o-- "0..*" Player
  Team "1..*" o-- "1..*" Player
  Team "1" *-- "0..*" Game
  Game "1" *-- "1..*" GameResult
  GameResult "1..*" o-- "1" Player
  PointsCalculationRule "1" *-- "0..2" PointsCalculationRule
  Player "0..1" o-- "0..1" User
  Player "1" *-- "0..1" Invitation
